# playground

./: .gitignore  PROJECT_CONTEXT.md  README.md
java/: backtracking-senior-swe-easy-test.java  backtracking-senior-swe-easy.java  bfs-dfs-senior-swe-easy-test.java  bfs-dfs-senior-swe-easy.java  binary-search-senior-swe-easy-test.java  dynamic-programming-senior-swe-easy.java  dynamic-programming-senior-swe-medium-test.java  dynamic-programming-senior-swe-medium.java  greedy-senior-swe-easy-test.java  greedy-senior-swe-medium-test.java  greedy-senior-swe-medium.java  hashmaps-senior-swe-medium-test.java  priority-queue-senior-swe-easy-test.java  queues-senior-swe-medium-test.java  queues-senior-swe-medium.java  sliding-window-senior-swe-easy-test.java  sliding-window-senior-swe-easy.java  sliding-window-senior-swe-medium-test.java  (+9 more)
job_scout/: .gitignore  CONTRIBUTING.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
job_scout/.github/: CODEOWNERS
job_scout/docs/: batch_ingestion.md  evaluation_contract.md  tracking_mvp.md
job_scout/docs/feedback/: Job Scout Evaluation Feedback.docx  Product Review – Job Scout Evaluation Engine (Iteration 3).docx
job_scout/job_scout/: __init__.py  capability_model_loader.py  cli.py  config.py  db.py  evaluator.py  models.py
job_scout/job_scout/loaders/: __init__.py  evaluation_model.py  profile.py
job_scout/job_scout/models/: __init__.py
job_scout/job_scout/services/: __init__.py
job_scout/profiles/: capability_model.json  evaluation_model.json  user_profile.example.json
job_scout/tests/: __init__.py  test_smoke.py
(+106 files in other folders)
