[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scout"
version = "0.1.0"
description = "Local-first job application intelligence assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "srstanl" }
]
dependencies = [
]

[project.scripts]
job-scout = "job_scout.cli:main"

[tool.setuptools.packages.find]
include = ["job_scout*"]
